src/test/ui/borrowck/borrowck-in-static.stderr
error[E0507]: cannot move out of `x`, a captured variable in an `Fn` closure
  --> $DIR/borrowck-in-static.rs:5:17
   |
LL |     let x = Box::new(0);
   |         - captured outer variable
LL |     Box::new(|| x)
   |              ---^
   |              |  |
   |              |  move occurs because `x` has type `Box<i32>`, which does not implement the `Copy` trait
   |              captured by this `Fn` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
